# image_processor

./: CMakeLists.txt  image_processor.cpp  image_processor.h  test.cpp
lib/BMP/: BMP.cpp  BMP.h
lib/controller/: controller.cpp  controller.h
lib/filters/: filters.cpp  filters.h
lib/parser/: parser.cpp  parser.h
